调整订制逻辑

--- a/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
@@ -29,14 +29,22 @@
 			var eduIndex = 0;
 
 			mui.plusReady(function() {
+
+				//---订制城市---start---
+				//进入订制城市界面
 				window.addEventListener('tapTitleLeft', function() {
-					console.log('科教-tapTitleLeft');
 					events.openNewWindowWithData('../utils/customizeCity.html', {
-						id: '0',
+						id: '0',//0科教，1展现
 						webid: '../scienceeducation/scienceeducation_home.html', //当前webview的id
 						cities: eduArray //已经定制的城市数组
 					});
 				});
+
+				//退出订制城市界面返回的数据
+				window.addEventListener('customizeCity', function(e) {
+					eduArray=e.detail.data;
+				});
+				//---订制城市---end---
 
 				//44.获取个人的订制城市
 				requestUserCity();
