--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -269,7 +269,7 @@
 							if(qunImgPath == '') {
 								events.fireToPageNone('/html/mine/qun_manage.html', 'refresh');
 								events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
-								events.fireToPageNone('../quan/tab-zone.html', 'infoChanged');
+								events.fireToPageNone('../cloud/cloud_home.html', 'infoChanged');
 								mui.toast('创建群成功');
 								mui.back();
 							} else {
