--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -74,7 +74,7 @@
 						events.fireToPageNone('mine.html', 'infoChanged');
 						//						events.fireToPageNone('../index/index.html','infoChanged');
 						events.fireToPageNone('classSpace-sub.html', 'infoChanged');
-						events.fireToPageNone('../quan/tab-zone.html', 'infoChanged');
+						events.fireToPageNone('../cloud/cloud_home.html', 'infoChanged');
 						if(no == 0) {
 							events.fireToPageNone('../cloud/cloud_home.html', 'personChanged');
 						}
