--- a/JiaoBaoYun-hb/html/quan/parentZone-sub.html
+++ b/JiaoBaoYun-hb/html/quan/parentZone-sub.html
@@ -185,6 +185,7 @@
 
 		function refreshUI() {
 			var ul = document.getElementsByClassName('mui-table-view')[0];
+			ul.innerHTML = '';
 			for(var i = 0; i < datasource.length; i++) {
 				var li = document.createElement("li");
 				li.className = 'mui-table-view-cell mui-media';
@@ -200,6 +201,9 @@
 					var month = today.getMonth() + 1
 					var currentDate = today.getFullYear() + "-" + month + "-" + today.getDate()
 					datasource[i].PublishDate = '';
+				}
+				if(!datasource[i].MsgContent){
+					datasource[i].MsgContent = '暂无动态'
 				}
 				var name = datasource[i].ugname;
 				var dateArr = datasource[i].PublishDate.split(' ');
