--- a/JiaoBaoYun-hb/html/show/show-sub.html
+++ b/JiaoBaoYun-hb/html/show/show-sub.html
@@ -18,6 +18,7 @@
 		  </div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/utils/h5fresh.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/show/show-sub.js"></script>
