科教子页面

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/home/index.css" />
+		<link rel="stylesheet" href="../../css/utils/slide_navigatian.css"/>
 		<style type="text/css">
 			.mui-bar-tab .mui-tab-item.mui-active {
 				color: #00a5e01;
