--- a/JiaoBaoYun-hb/html/scienceeducation/senedu-sub.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/senedu-sub.html
@@ -13,19 +13,29 @@
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/utils/slide-selector.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
-	
+
 		<script type="text/javascript">
 			mui.init()
 			mui.plusReady(function() {
 				window.addEventListener('cityInfo', function(e) {
-					SECity = e.detail;//当前显示的科教城市
+					SECity = e.detail; //当前显示的科教城市
 					console.log("科教子页面获取的城市信息：" + JSON.stringify(SECity));
 					personalUTID = myStorage.getItem(storageKeyName.PERSONALINFO).utid;
-//					pageIndex = 1;
-//					requestData();
+					//					pageIndex = 1;
+					//					requestData();
+				})
+				//刷新
+				h5fresh.addRefresh(function() {
+
 				})
 				slide_selector.addSwipeListener();
 			})
+			//加载更多
+			var pullUpRefresh = function() {
+				document.addEventListener("plusscrollbottom", function() {
+//					console.log('我在底部pageIndex:' + selectGContainer.classInfo.pageIndex + ',totalPageCount:' + totalPageCount);
+				}, false);
+			}
 		</script>
 	</body>
 
