--- a/JiaoBaoYun-hb/html/show/show-sub.html
+++ b/JiaoBaoYun-hb/html/show/show-sub.html
@@ -5,10 +5,190 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<link rel="stylesheet" href="../../css/mui.min.css">
+		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/icons-extra.css" />
+		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
+		<script src="../../js/mui.min.js"></script>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<script type="text/javascript" src="../../js/quan/dynamiclistitem.js"></script>
+				<style>
+			.mui-table-view-cell,
+			.mui-table-view-cell:active {
+				background-color: #FFFFFF;
+			}
+			
+			.mui-table-view {
+				background: transparent;
+				/*背景色透明*/
+			}
+			
+			.mui-table-view-cell {
+				background: white;
+				/*cell 背景设为白色*/
+				padding: 0;
+				/*内边距为0*/
+				margin-bottom: 10px;
+			}
+			
+			.mui-table-view:before,
+			.mui-table-view:after,
+			.mui-table-view-cell:after {
+				height: 0px;
+				/*去掉横线*/
+			}
+			
+			.mui-row-padding-8px {
+				padding: 8px;
+				/*内边距为8px*/
+				padding: 12px;
+			}
+			
+			.dynamic-personal-image {
+				/*个人头像圆形*/
+				border-radius: 50%;
+				width: 50px;
+				height: 50px;
+			}
+			
+			.dynamic-image-div {
+				/*内容中图片之间的内边距*/
+				padding: 1px;
+			}
+			
+			.dynamic-image {
+				/*内容的图片占全部空间*/
+				width: 100%;
+				height: 100%;
+			}
+			
+			.dynamic-icon,
+			.dynamic-icon-praise,
+			.dynamic-icon-comment,
+			.dynamic-icon-forward {
+				/*点赞，评论，分享的图标*/
+				height: 30px;
+				width: 30px;
+				margin-left: 25px;
+			}
+			
+			.dynamic-icon-Level {
+				/*等级图标*/
+				height: 20px;
+				margin-left: 10px;
+			}
+			
+			.dynamic-icon-praise-small {
+				/*点赞列表的小图标*/
+				height: 15px;
+				width: 15px;
+				margin-right: 5px;
+				margin-bottom: 0px;
+			}
+			
+			.dynamic-margin-top-10px {
+				margin-top: 10px;
+			}
+			
+			.dynamic-padding-left-10px {
+				padding-left: 10px;
+			}
+			
+			.dynamic-line {
+				/*点赞列表上面的横线*/
+				height: 1px;
+				width: 100%;
+				background: #e4e4e4;
+			}
+			
+			.dynamic-contenttext {
+				/*动态内容*/
+				font-family: '微软雅黑 Regular', '微软雅黑';
+				/*字体样式*/
+			}
+			
+			.dynamic-praise-name,
+			.dynamic-comment-name {
+				/*点赞者和评论者的名字*/
+				color: #1277C7;
+			}
+			
+			.replyComment {
+				padding-top: 5px;
+			}
+			
+			.dynamic-comment-btn {
+				/*底部的评论按钮*/
+				width: 100%;
+				margin-top: 10px;
+				border-width: 1px;
+				border-color: #e4e4e4;
+			}
+			
+			.dynamic-image-more {
+				/*更多图片*/
+				position: absolute;
+				width: 99%;
+				height: 99%;
+				font-size: 40px;
+				color: white;
+				text-align: center;
+				background-color: rgba(0, 0, 0, 0.3);
+			}
+			
+			.mui-popover {
+				position: fixed;
+				height: 45px;
+				width: 60px;
+			}
+			
+			footer {
+				height: 60px;
+				width: 100%;
+				z-index: 20;
+				background-color: white;
+				border-color: lightgray;
+				border-width: 5px;
+				position: fixed;
+				bottom: 0;
+				display: none;
+			}
+			
+			.footer-center {
+				display: inline-block;
+				width: 75%;
+				padding: 5px;
+				height: 100%;
+			}
+			
+			.footer-center .input-text {
+				background: #fff;
+				border: solid 1px #ddd;
+				padding: 10px !important;
+				font-size: 16px !important;
+				line-height: 18px !important;
+				font-family: verdana !important;
+				overflow: hidden;
+				height: 40px;
+			}
+			
+			.btn-commit {
+				position: absolute;
+				top: 10px;
+				right: 10px;
+				display: inline-block;
+				width: 20%;
+			}
+		</style>
 	</head>
 
 	<body>
+		<footer id="footer" class="mui-bar mui-bar-tab" style="display: none;">
+			<div class="footer-center">
+				<textarea onblur="inputOnblur(this)" id='msg-content' type="text" class='input-text'></textarea>
+			</div>
+			<button id='btn-reply' class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;">评论</button>
+		</footer>
 		<!--下拉刷新容器-->
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 		  <div class="mui-scroll">
@@ -22,6 +202,7 @@
 		<script src="../../js/utils/h5fresh.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/show/show-sub.js"></script>
+		<script type="text/javascript" src="../../js/utils/native.js"></script>
 	</body>
 
 </html>
