--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -24,34 +24,34 @@
 			.mui-table-view-cell:after {
 				height: 0px;
 			}
-			
+
 			.mui-table-view-cell {
 				background: white;
 			}
-			
+
 			.mui-table-view.mui-grid-view .mui-table-view-cell {
 				margin-right: 0px;
 			}
-			
+
 			.cloud-bottom-imge2 {
 				height: 40px !important;
 				width: 40px !important;
 			}
-			
+
 			.cloud-bottom-imge3 {
 				height: 40px;
 				width: 40px;
 				/*padding: 5px;
 				padding-top: 0px;*/
 			}
-			
+
 			.cloud-bottom-imge2-bg {
 				height: 40px;
 				width: 40px;
 				border-radius: 50%;
 				margin: auto;
 			}
-			
+
 			.cloud-bottom-imge3-bg {
 				height: 15px;
 				width: 15px;
@@ -59,17 +59,17 @@
 				position: absolute;
 				top: 90%;
 			}
-			
+
 			.cloud-bottom-icon {
 				/*云存储右侧按钮*/
 				height: 20px;
 				width: 20px;
 			}
-			
+
 			.cloud-text-align-center {
 				text-align: center;
 			}
-			
+
 			.cloud-line {
 				/*功能名字右侧树竖线*/
 				position: absolute;
@@ -79,7 +79,7 @@
 				background: #D9D9D9;
 				height: 100%;
 			}
-			
+
 			#cloudstorage,
 			#cloudapps,
 			#cloudrecord {
@@ -87,28 +87,28 @@
 				padding: 10px;
 				margin: 0;
 			}
-			
+
 			.mui-table-view {
 				background: transparent;
 				min-height: 90px;
 				margin: 5px 0 !important;
 				padding: 16px 0 !important;
 			}
-			
+
 			.mui-progressbar {
 				border-radius: 5px;
 				background-color: #EBEBEB;
 			}
-			
+
 			.mui-progressbar span {
 				background-color: #4aa5fc;
 			}
-			
+
 			.cloud-file-icon {
 				font-size: 30px;
 				padding-top: 10px;
 			}
-			
+
 			.cloud-iconfont {
 				/*其他图标*/
 				font-size: 30px;
@@ -117,41 +117,41 @@
 				margin: 0px !important;
 				border: none !important;
 			}
-			
+
 			.mui-slider-indicator .mui-icon {
 				font-size: 40px;
 				/*line-height: 30px;*/
 			}
-			
+
 			.mui-segmented-control.mui-scroll-wrapper .mui-control-item {
 				padding: 0px 0px;
 				margin: 0px;
 			}
-			
+
 			.mui-table-view.mui-grid-view .cloud-font {
 				font-weight: bold;
 				width: 16%;
 				padding: 0 12px;
 			}
-			
+
 			.mui-segmented-control {
 				border: none;
 			}
-			
+
 			.mui-segmented-control .mui-control-item {
 				line-height: normal;
 			}
-			
+
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				color: inherit;
 				border-bottom: none;
 			}
-			
+
 			.mui-slider-indicator .mui-icon {
 				border: none;
 				/*font-size: 35px;*/
 			}
-			
+
 			.cloud-red-point {
 				width: 10px;
 				height: 10px;
@@ -469,7 +469,7 @@
 									}
 								},
 							});
-						
+
 						}
 					}
 				});
@@ -800,8 +800,8 @@
 					a.className = 'mui-control-item';
 					a.id = 'studentsdynamic' + id_index
 					var html0 = '<div class="cloud-red-point" style="margin-left:' + maxWidth / 1.5 + 'px' + ';"></div>';
-					a.innerHTML = html0 + '<img class="cloud-bottom-imge2-bg" src="' + updateHeadImg(data.gimg, 2) + '"/>\
-									   <p class="mui-ellipsis">' + data.ugname + '</p>';
+					a.innerHTML = html0 + '<img class="cloud-bottom-imge2-bg" src="' + updateHeadImg(data.stuimg, 2) + '"/>\
+									   <p class="mui-ellipsis">' + data.stuname + '</p>';
 					a.style.width = maxWidth + 'px';
 					a.style.height = '60px';
 					a.style.marginTop = '10px';
