--- a/JiaoBaoYun-hb/html/show/show-sub.html
+++ b/JiaoBaoYun-hb/html/show/show-sub.html
@@ -190,7 +190,7 @@
 			<button id='btn-reply' class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;">评论</button>
 		</footer>
 		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+		<div id="refreshContainer" class="mui-content ">
 		  <div class="mui-scroll">
 		    <!--数据列表-->
 		   <ul id="list-container" class="mui-table-view">
