--- a/JiaoBaoYun-hb/html/scienceeducation/senedu_show_main.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/senedu_show_main.html
@@ -1,3 +1,8 @@
+<!--
+	作者：444811716@qq.com
+	时间：2017-01-17
+	描述：打开链接
+-->
 <!doctype html>
 <html>
 
@@ -12,28 +17,27 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<!--<h1 class="mui-title">标题</h1>-->
 		</header>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-				//---获取数据并传递数据---start---
+				//---获取数据---start---
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				var data = main.data; //接收A页面传入参数值
 				console.log('main-data:' + JSON.stringify(data));
-
-				//				document.body.querySelector('.mui-title').innerText = data.stuname;
-
 				mui.openWindow({
 					url: data.turl,
 					id: data.turl,
 					styles: {
 						top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px', //设置距离顶部的距离
 						bottom: '0px'
-					}
+					},
+					waiting: {
+						title: '正在加载...'
+					},
 				});
-				//---获取数据并传递数据---end---
+				//---获取数据---end---
 			});
 		</script>
 	</body>
